--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "async": "^0.9.2",
+    "autoprefixer": "^10.2.6",
     "bcryptjs": "^2.4.3",
     "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
     "express-flash": "^0.0.2",
@@ -20,9 +20,12 @@
     "mongoose": "^5.12.13",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.4"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.7"
   }
 }
