--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   },
   "dependencies": {
     "async": "^0.9.2",
-    "autoprefixer": "^10.2.6",
     "bcryptjs": "^2.4.3",
     "debug": "~2.6.9",
-    "ejs": "^3.1.6",
     "express": "~4.16.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
@@ -21,8 +19,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.4"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
